<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <groupId>dvaara</groupId>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>org.dvaara.wso2.oauth2.token.handler.clientauth.mutualtls</artifactId>
    <packaging>bundle</packaging>
    <name>SPIFFE Mutual TLS client authenticator</name>
    <url>http://wso2.org</url>
    <version>0.1.0</version>

    <repositories>
        <repository>
            <id>wso2-nexus</id>
            <name>WSO2 internal Repository</name>
            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>ignore</checksumPolicy>
            </releases>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.idp.mgt</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.application.common</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.user.profile</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.core</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.entitlement</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>${commons.collections.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.notification.mgt</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.core</artifactId>
            <version>${carbon.kernel.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.user.core</artifactId>
            <version>${carbon.kernel.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.application.mgt</artifactId>
            <version>${carbon.identity.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.oltu.oauth2</groupId>
            <artifactId>org.apache.oltu.oauth2.client</artifactId>
            <version>${org.apache.oltu.oauth2.client.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.oltu.oauth2</groupId>
            <artifactId>org.apache.oltu.oauth2.common</artifactId>
            <version>${org.apache.oltu.oauth2.common.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.ui</artifactId>
            <version>${carbon.kernel.version}</version>
        </dependency>
        <dependency>
            <groupId>org.json.wso2</groupId>
            <artifactId>json</artifactId>
            <version>${wso2.json}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${javax.servlet-api.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>${javax.servelet.jstl.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>${nimbusds.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.apache.oltu.oauth2</groupId>
            <artifactId>oltu</artifactId>
            <version>${oltu.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.felix</groupId>
            <artifactId>org.apache.felix.scr.ds-annotations</artifactId>
            <version>${apache.felix.scr.ds.annotations.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.eclipse.osgi</groupId>
            <artifactId>org.eclipse.osgi.services</artifactId>
            <version>${equinox.osgi.services.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.inbound.auth.oauth2</groupId>
            <artifactId>org.wso2.carbon.identity.oauth</artifactId>
            <version>${identity.inbound.auth.oauth.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.securevault</groupId>
            <artifactId>org.wso2.securevault</artifactId>
            <version>${org.wso2.securevault.version}</version>
            <exclusions>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.wso2.orbit.org.owasp.encoder</groupId>
            <artifactId>encoder</artifactId>
            <version>${encoder.wso2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.wso2.balana</groupId>
            <artifactId>org.wso2.balana.utils</artifactId>
            <version>${balana.version}</version>
        </dependency>
        <!--Test Dependencies-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.agent</artifactId>
            <classifier>runtime</classifier>
            <scope>test</scope>
            <version>${jacoco.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.powermock/powermock-module-testng -->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-testng</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>${powermock.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>${javaee.web.api.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2database.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.identity.framework</groupId>
            <artifactId>org.wso2.carbon.identity.testutil</artifactId>
            <version>${carbon.identity.test.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon</groupId>
            <artifactId>org.wso2.carbon.tomcat.ext</artifactId>
            <version>${carbon.kernel.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.extension.identity.oauth.addons</groupId>
            <artifactId>org.wso2.carbon.identity.oauth2.token.handler.clientauth.jwt</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.wso2.carbon.extension.identity.oauth.addons</groupId>
            <artifactId>org.wso2.carbon.identity.oauth2.validators.xacml</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugins.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                        <Bundle-Name>${project.artifactId}</Bundle-Name>
                        <Private-Package>org.wso2.carbon.identity.oauth2.token.handler.clientauth.mutualtls.internal
                        </Private-Package>
                        <Import-Package>
                            javax.servlet.http;version="${javax.servlet.http.package.import.version.range}",
                            org.apache.commons.lang;version="${apache.commons.lang.package.import.version.range}",
                            org.apache.commons.logging;version="${apache.commons.logging.package.import.version.range}",
                            org.apache.oltu.oauth2.common;version="${apache.oltu.oauth2.common.package.import.version.range}",
                            org.osgi.framework;version="${osgi.framework.package.import.version.range}",
                            org.osgi.service.component;version="${osgi.service.component.package.import.version.range}",
                            org.wso2.carbon.identity.oauth.common;version="${identity.inbound.auth.oauth.imp.pkg.version}",
                            org.wso2.carbon.identity.oauth.common.exception;version="${identity.inbound.auth.oauth.imp.pkg.version}",
                            org.wso2.carbon.identity.oauth2;version="${identity.inbound.auth.oauth.imp.pkg.version}",
                            org.wso2.carbon.identity.oauth2.bean;version="${identity.inbound.auth.oauth.imp.pkg.version}",
                            org.wso2.carbon.identity.oauth2.client.authentication;version="${identity.inbound.auth.oauth.imp.pkg.version}",
                            org.wso2.carbon.identity.oauth2.token.handler.clientauth.mutualtls,
                            org.wso2.carbon.identity.oauth2.util;version="${identity.inbound.auth.oauth.imp.pkg.version}"
                        </Import-Package>
                        <Export-Package>
                            !org.wso2.carbon.identity.oauth2.token.handler.clientauth.mutualtls.internal,
                            org.wso2.carbon.identity.oauth2.token.handler.clientauth.mutualtls.utils.*,
                            org.wso2.carbon.identity.oauth2.token.handler.clientauth.mutualtls.*,
                        </Export-Package>
                    </instructions>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-scr-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <!--<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine>-->
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                    </systemPropertyVariables>
                    <reuseForks>true</reuseForks>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-prepare-agent-integration</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report-integration</id>
                        <goals>
                            <goal>report-integration</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule implementation="org.jacoco.maven.RuleConfiguration">
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit implementation="org.jacoco.report.check.Limit">
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.4</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <properties>

        <carbon.identity.version>5.11.16</carbon.identity.version>
        <identity.inbound.auth.oauth.version>6.0.0</identity.inbound.auth.oauth.version>
        <identity.inbound.auth.oauth.imp.pkg.version>[6.0.0,7.0.0)</identity.inbound.auth.oauth.imp.pkg.version>
        <carbon.kernel.version>4.4.7</carbon.kernel.version>
        <org.apache.oltu.oauth2.client.version>1.0.0</org.apache.oltu.oauth2.client.version>
        <org.apache.oltu.oauth2.common.version>1.0.1</org.apache.oltu.oauth2.common.version>
        <oltu.package.import.version.range>[1.0.0, 2.0.0)</oltu.package.import.version.range>
        <wso2.json>3.0.0.wso2v1</wso2.json>
        <javax.servlet-api.version>3.0-alpha-1</javax.servlet-api.version>
        <javax.servelet.jstl.version>1.2</javax.servelet.jstl.version>
        <maven.source.plugin.version>1.22.0</maven.source.plugin.version>
        <maven.plugins.version>2.0</maven.plugins.version>
        <javax.servlet.http.package.import.version.range>[2.6,3)</javax.servlet.http.package.import.version.range>
        <apache.commons.lang.package.import.version.range>[2.6,3)</apache.commons.lang.package.import.version.range>
        <apache.commons.logging.package.import.version.range>[1.1,2)
        </apache.commons.logging.package.import.version.range>
        <apache.oltu.oauth2.common.package.import.version.range>[1.0,2)
        </apache.oltu.oauth2.common.package.import.version.range>
        <osgi.framework.package.import.version.range>[1.7,2)</osgi.framework.package.import.version.range>
        <osgi.service.component.package.import.version.range>[1.2,2)
        </osgi.service.component.package.import.version.range>
        <balana.import.version.range>[1.1.0, 2.0.0)</balana.import.version.range>

        <!--Test Dependencies-->
        <carbon.identity.test.version>5.11.9</carbon.identity.test.version>
        <commons.collections.version>3.2.2</commons.collections.version>
        <junit.version>4.12</junit.version>
        <testng.version>6.9.10</testng.version>
        <jacoco.version>0.7.9</jacoco.version>
        <powermock.version>1.6.6</powermock.version>
        <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>

    </properties>
</project>
